homepage updated. mem. registration started

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
                         role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="members.html"><span class="item-text">Member
+                        <a class="dropdown-item page-scroll" href="#applications"><span class="item-text">Member
                                 Registration</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="causes.html"><span class="item-text">Cause
@@ -137,7 +137,7 @@
                     <h2>Applications are now open!</h2>
                     <p class="p-heading p-large">Interested in joining the largest student-led code for good groups in
                         Calgary? Applications are open
-                        till <b>February 7, 2020.</b>
+                        till <b>February 14, 2020.</b>
                     </p>
 
                     <div class="m-4">
@@ -551,15 +551,15 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_cole.jpeg" alt="alternative">
+                            <img class="img-fluid" src="images/_cole.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Cole Thiessen</strong></p>
                         <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/ckthiessen/> <i
+                                <a href=https://www.linkedin.com/in/ckthiessen /> <i
                                     class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -574,9 +574,9 @@
                         <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/aribaanees/> <i
+                                <a href=https://www.linkedin.com/in/aribaanees /> <i
                                     class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -592,9 +592,9 @@
                         <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/groups/1843315/> <i
+                                <a href=https://www.linkedin.com/groups/1843315 /> <i
                                     class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -613,8 +613,9 @@
                         <p class="job-title">Dev Leader @ Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/rostoker/> <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/rostoker /> <i
+                                    class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -630,8 +631,8 @@
                         <p class="job-title">Scrum Master @ Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/priyash/> <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/priyash /> <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
