--- a/sponsors.html
+++ b/sponsors.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Thanks for submitting your project to us">
+    <meta name="description" content="Code the Change YYC - Our Current and Past Projects">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
     <meta property="og:site_name" content="" /> <!-- website name -->
@@ -18,7 +18,7 @@
     <meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Cause Registration Thank You | Code The Change YYC</title>
+    <title>Sponsors | Code The Change YYC</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext"
@@ -79,7 +79,7 @@
                     <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
                         role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item page-scroll" href="#applications"><span class="item-text">Member
+                        <a class="dropdown-item" href="members.html"><span class="item-text">Member
                                 Registration</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="causes.html"><span class="item-text">Cause
@@ -106,8 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Thank You!</h1>
-                    <h3>Our team will review your submission and get back to you as soon as possible.</h3>
+                    <h1>Team Sponsors</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -121,7 +120,78 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Projects</span>
+                    </div> <!-- end of breadcrumbs -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-1 -->
+    <!-- end of breadcrumbs -->
+
+
+    <!-- Terms Content -->
+    <div class="ex-basic-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="text-container">
+                        <h3>Currently Available Projects</h3>
+                        <h2>The YW</h2>
+                        <ol>
+                            <li><b>Natural Language Processing Project</b> - The YW receives critical incident reports
+                                from people at risk describing the risks they are facing, along with various details
+                                regarding personal information and the incident itself. These reports can often be
+                                difficult to categorize, as the current format requires that volunteers at the YW read
+                                through each report to determine the type of report and who should manage it. They have
+                                asked for our help in developing a machine learning solution to analyze and correctly
+                                categorize the reports based on the type of incident. The technologies used will be
+                                discussed with the YW further, but you will be sure to hone your Python, ML, and data
+                                analysis skills by working on this project, while also helping vulnerable people receive
+                                the help they need at a more efficient rate.</li>
+                            <li><b>E-learning Storefront Project</b> - The YW has asked for our help in developing a
+                                storefront/marketing website with e-commerce integration to host informational
+                                e-learning videos on the topic of Mindful Workplaces. These videos will help employees
+                                across Calgary manage stress, conflict, and pick up on emotional regulation skills,
+                                which all lead towards healthier work environments. You will expand your web development
+                                and e-commerce skills, while helping develop a product that will reduce stress and
+                                improve the work life of hundreds of Calgarians.</li>
+                        </ol>
+                        <h2>Momentum</h2>
+                        <ol>
+                            <li><b>Money Savings Program</b> - Momentum offers financial education and resources to
+                                Calgarians, and one of the excellent programs they offer encourages low-income
+                                Calgarians to learn how to save money by matching the amount they manage to save at the
+                                end of a set time period. Their current solution needs various improvements regarding
+                                verification of savings, low-income status, and location. Some technologies you will be
+                                working with are various web development languages and API integration with financial
+                                aggregators, just to name a few. Plus, you’ll be directly contributing to a program that
+                                enables Calgarians to escape the grips of poverty.</li>
+                        </ol>
+                        <h2>Alberta Mental Health Advocacy Coalition (AMHAC)</h2>
+                        <ol>
+                            <li><b>Website/Logo Project</b> - The Alberta Mental Health Advocacy Coalition (AMHAC) aims
+                                to transform the mental healthcare system to one that is more accessible, appropriate,
+                                equitable, effective, empowering and sustainable for patients, family, the public and
+                                health providers. They currently do not have a logo or website to accurately represent
+                                them or their vision. You will be involved in graphic design and web development,
+                                including UI/UX design, while contributing to a mission that benefits one of the
+                                greatest struggles that the majority of society faces.</li>
+                        </ol>
+                    </div> <!-- end of text-container -->
+                </div>
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic -->
+    <!-- end of terms content -->
+
+
+    <!-- Breadcrumbs -->
+    <div class="ex-basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumbs">
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Projects</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
