--- a/events.html
+++ b/events.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,28 +9,30 @@
     <meta name="description" content="Code the Change YYC - Upcoming and Past Events">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
-	<meta property="og:type" content="article" />
+    <meta property="og:site_name" content="" /> <!-- website name -->
+    <meta property="og:site" content="" /> <!-- website link -->
+    <meta property="og:title" content="" /> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+    <meta property="og:type" content="article" />
 
     <!-- Website Title -->
     <title>What's Happening | Code The Change YYC</title>
 
     <!-- Styles -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext"
+        rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
+    <link href="css/magnific-popup.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
-	<!-- Favicon  -->
+    <!-- Favicon  -->
     <link rel="icon" href="images/_logo.png">
 </head>
+
 <body data-spy="scroll" data-target=".fixed-top">
 
     <!-- Navigation -->
@@ -41,7 +44,8 @@
         <a class="navbar-brand logo-image" href="index.html"><img src="images/_logo.png" alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-awesome fas fa-bars"></span>
             <span class="navbar-toggler-awesome fas fa-times"></span>
         </button>
@@ -50,7 +54,8 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="index.html#header">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="index.html#header">Home <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#students">Who is it for?</a>
@@ -58,21 +63,27 @@
 
                 <!-- Details Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Details</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
+                        role="button" aria-haspopup="true" aria-expanded="false">Details</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="events.html"><span class="item-text">Events</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="projects.html"><span class="item-text">Projects</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" href="sponsors.html"><span class="item-text">Sponsors</span></a>
                     </div>
                 </li>
 
                 <!-- Registration Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
+                        role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="members.html"><span class="item-text">Member Registration</span></a>
+                        <a class="dropdown-item page-scroll" href="#applications"><span class="item-text">Member
+                                Registration</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="causes.html"><span class="item-text">Cause Registration</span></a>
+                        <a class="dropdown-item" href="causes.html"><span class="item-text">Cause
+                                Registration</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menus -->
@@ -125,28 +136,34 @@
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
                         <h3>Jan 29 2020: Code the Change Club Info Night</h3>
-                        <p>Join us on January 29th to find out more about what we want to do at Code the Change and learn about the different kinds of projects available.</p>
-          <div align="center"><img class="img-fluid" src="images/codethechangeyyc-infonight.png" border="0"></a></div>        
-      </div> <!-- end of text-container -->
-  
+                        <p>Join us on January 29th to find out more about what we want to do at Code the Change and
+                            learn about the different kinds of projects available.</p>
+                        <div align="center"><img class="img-fluid" src="images/codethechangeyyc-infonight.png"
+                                border="0"></a></div>
+                    </div> <!-- end of text-container -->
+
                     <div class="text-container">
-                      <h3>Nov 9 2019: Code The Change Calgary Kickoff + Hackathon</h3>
-                      <p>
-                        Join us as we launch the first ever city-wide chapter of Code The Change in Calgary.
-                        We want to celebrate this day by hosting a kickoff party and mini hackathon.
-                        The central theme of this event will be Climate Action.
-                        It's going to be a jam-packed, collaborative learning experience with a chance to work with industry experts and local non-profits.
-                      </p>
-                        <p><a href="https://eventbrite.com/e/74906851409">Click here to sign up through Eventbrite.</a></p>
-        <div align="center"><a href="https://eventbrite.com/e/74906851409"><img class="img-fluid" src="images/codethechangeyyc-kickoff.jpg" border="0"></a></div>        
-        <div class='embedsocial-album' data-ref="50c756f8f500eb5ea9e415b3f46eb802449ab57a"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/ei.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialScript"));</script>
-    </div> <!-- end of text-container -->
+                        <h3>Nov 9 2019: Code The Change Calgary Kickoff + Hackathon</h3>
+                        <p>
+                            Join us as we launch the first ever city-wide chapter of Code The Change in Calgary.
+                            We want to celebrate this day by hosting a kickoff party and mini hackathon.
+                            The central theme of this event will be Climate Action.
+                            It's going to be a jam-packed, collaborative learning experience with a chance to work with
+                            industry experts and local non-profits.
+                        </p>
+                        <p><a href="https://eventbrite.com/e/74906851409">Click here to sign up through Eventbrite.</a>
+                        </p>
+                        <div align="center"><a href="https://eventbrite.com/e/74906851409"><img class="img-fluid"
+                                    src="images/codethechangeyyc-kickoff.jpg" border="0"></a></div>
+                        <div class='embedsocial-album' data-ref="50c756f8f500eb5ea9e415b3f46eb802449ab57a"></div>
+                        <script>(function (d, s, id) { var js; if (d.getElementById(id)) { return; } js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/ei.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialScript"));</script>
+                    </div> <!-- end of text-container -->
 
                 </div>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic -->
-        <!-- end of terms content -->
+    <!-- end of terms content -->
 
 
     <!-- Breadcrumbs -->
@@ -180,11 +197,13 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">California <a class="turquoise" href="http://codethechange.stanford.edu/#/">Code The Change Stanford</a></div>
+                                <div class="media-body">California <a class="turquoise"
+                                        href="http://codethechange.stanford.edu/#/">Code The Change Stanford</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">British Columbia <a class="turquoise" href="http://codethechange.ca/">Code The Change UBC</a></div>
+                                <div class="media-body">British Columbia <a class="turquoise"
+                                        href="http://codethechange.ca/">Code The Change UBC</a></div>
                             </li>
                         </ul>
                     </div>
@@ -223,7 +242,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a href="https://inovatik.com">Inovatik</a></p>
+                    <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a
+                            href="https://inovatik.com">Inovatik</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
@@ -241,4 +261,5 @@
     <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
 </body>
+
 </html>
