--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,28 +9,30 @@
     <meta name="description" content="Code the Change YYC - Our Current and Past Projects">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
-	<meta property="og:type" content="article" />
+    <meta property="og:site_name" content="" /> <!-- website name -->
+    <meta property="og:site" content="" /> <!-- website link -->
+    <meta property="og:title" content="" /> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+    <meta property="og:type" content="article" />
 
     <!-- Website Title -->
     <title>Projects Updates | Code The Change YYC</title>
 
     <!-- Styles -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext"
+        rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
+    <link href="css/magnific-popup.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
-	<!-- Favicon  -->
+    <!-- Favicon  -->
     <link rel="icon" href="images/_logo.png">
 </head>
+
 <body data-spy="scroll" data-target=".fixed-top">
 
     <!-- Navigation -->
@@ -41,7 +44,8 @@
         <a class="navbar-brand logo-image" href="index.html"><img src="images/_logo.png" alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-awesome fas fa-bars"></span>
             <span class="navbar-toggler-awesome fas fa-times"></span>
         </button>
@@ -50,7 +54,8 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="index.html#header">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="index.html#header">Home <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#students">Who is it for?</a>
@@ -58,21 +63,27 @@
 
                 <!-- Details Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Details</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
+                        role="button" aria-haspopup="true" aria-expanded="false">Details</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="events.html"><span class="item-text">Events</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="projects.html"><span class="item-text">Projects</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" href="sponsors.html"><span class="item-text">Sponsors</span></a>
                     </div>
                 </li>
 
                 <!-- Registration Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
+                        role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="members.html"><span class="item-text">Member Registration</span></a>
+                        <a class="dropdown-item page-scroll" href="#applications"><span class="item-text">Member
+                                Registration</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="causes.html"><span class="item-text">Cause Registration</span></a>
+                        <a class="dropdown-item" href="causes.html"><span class="item-text">Cause
+                                Registration</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menus -->
@@ -125,19 +136,47 @@
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
                         <h3>Currently Available Projects</h3>
-                          <h2>The YW</h2>
-                          <ol>
-                              <li><b>Natural Language Processing Project</b> - The YW receives critical incident reports from people at risk describing the risks they are facing, along with various details regarding personal information and the incident itself. These reports can often be difficult to categorize, as the current format requires that volunteers at the YW read through each report to determine the type of report and who should manage it. They have asked for our help in developing a machine learning solution to analyze and correctly categorize the reports based on the type of incident. The technologies used will be discussed with the YW further, but you will be sure to hone your Python, ML, and data analysis skills by working on this project, while also helping vulnerable people receive the help they need at a more efficient rate.</li>
-                              <li><b>E-learning Storefront Project</b> - The YW has asked for our help in developing a storefront/marketing website with e-commerce integration to host informational e-learning videos on the topic of Mindful Workplaces. These videos will help employees across Calgary manage stress, conflict, and pick up on emotional regulation skills, which all lead towards healthier work environments. You will expand your web development and e-commerce skills, while helping develop a product that will reduce stress and improve the work life of hundreds of Calgarians.</li>
-                          </ol>
-                          <h2>Momentum</h2>
-                          <ol>
-                              <li><b>Money Savings Program</b> - Momentum offers financial education and resources to Calgarians, and one of the excellent programs they offer encourages low-income Calgarians to learn how to save money by matching the amount they manage to save at the end of a set time period. Their current solution needs various improvements regarding verification of savings, low-income status, and location. Some technologies you will be working with are various web development languages and API integration with financial aggregators, just to name a few. Plus, you’ll be directly contributing to a program that enables Calgarians to escape the grips of poverty.</li>
-                          </ol>
-                          <h2>Alberta Mental Health Advocacy Coalition (AMHAC)</h2>
-                          <ol>
-                              <li><b>Website/Logo Project</b> - The Alberta Mental Health Advocacy Coalition (AMHAC) aims to transform the mental healthcare system to one that is more accessible, appropriate, equitable, effective, empowering and sustainable for patients, family, the public and health providers. They currently do not have a logo or website to accurately represent them or their vision. You will be involved in graphic design and web development, including UI/UX design, while contributing to a mission that benefits one of the greatest struggles that the majority of society faces.</li>
-                          </ol>
+                        <h2>The YW</h2>
+                        <ol>
+                            <li><b>Natural Language Processing Project</b> - The YW receives critical incident reports
+                                from people at risk describing the risks they are facing, along with various details
+                                regarding personal information and the incident itself. These reports can often be
+                                difficult to categorize, as the current format requires that volunteers at the YW read
+                                through each report to determine the type of report and who should manage it. They have
+                                asked for our help in developing a machine learning solution to analyze and correctly
+                                categorize the reports based on the type of incident. The technologies used will be
+                                discussed with the YW further, but you will be sure to hone your Python, ML, and data
+                                analysis skills by working on this project, while also helping vulnerable people receive
+                                the help they need at a more efficient rate.</li>
+                            <li><b>E-learning Storefront Project</b> - The YW has asked for our help in developing a
+                                storefront/marketing website with e-commerce integration to host informational
+                                e-learning videos on the topic of Mindful Workplaces. These videos will help employees
+                                across Calgary manage stress, conflict, and pick up on emotional regulation skills,
+                                which all lead towards healthier work environments. You will expand your web development
+                                and e-commerce skills, while helping develop a product that will reduce stress and
+                                improve the work life of hundreds of Calgarians.</li>
+                        </ol>
+                        <h2>Momentum</h2>
+                        <ol>
+                            <li><b>Money Savings Program</b> - Momentum offers financial education and resources to
+                                Calgarians, and one of the excellent programs they offer encourages low-income
+                                Calgarians to learn how to save money by matching the amount they manage to save at the
+                                end of a set time period. Their current solution needs various improvements regarding
+                                verification of savings, low-income status, and location. Some technologies you will be
+                                working with are various web development languages and API integration with financial
+                                aggregators, just to name a few. Plus, you’ll be directly contributing to a program that
+                                enables Calgarians to escape the grips of poverty.</li>
+                        </ol>
+                        <h2>Alberta Mental Health Advocacy Coalition (AMHAC)</h2>
+                        <ol>
+                            <li><b>Website/Logo Project</b> - The Alberta Mental Health Advocacy Coalition (AMHAC) aims
+                                to transform the mental healthcare system to one that is more accessible, appropriate,
+                                equitable, effective, empowering and sustainable for patients, family, the public and
+                                health providers. They currently do not have a logo or website to accurately represent
+                                them or their vision. You will be involved in graphic design and web development,
+                                including UI/UX design, while contributing to a mission that benefits one of the
+                                greatest struggles that the majority of society faces.</li>
+                        </ol>
                     </div> <!-- end of text-container -->
                 </div>
             </div> <!-- end of row -->
@@ -177,11 +216,13 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">California <a class="turquoise" href="http://codethechange.stanford.edu/#/">Code The Change Stanford</a></div>
+                                <div class="media-body">California <a class="turquoise"
+                                        href="http://codethechange.stanford.edu/#/">Code The Change Stanford</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">British Columbia <a class="turquoise" href="http://codethechange.ca/">Code The Change UBC</a></div>
+                                <div class="media-body">British Columbia <a class="turquoise"
+                                        href="http://codethechange.ca/">Code The Change UBC</a></div>
                             </li>
                         </ul>
                     </div>
@@ -220,7 +261,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a href="https://inovatik.com">Inovatik</a></p>
+                    <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a
+                            href="https://inovatik.com">Inovatik</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
@@ -238,4 +280,5 @@
     <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
 </body>
+
 </html>
