Projects.html redesign, 2 new team head shots

--- a/index.html
+++ b/index.html
@@ -551,15 +551,15 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_cole.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_cole-colorcorrected.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Cole Thiessen</strong></p>
                         <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/ckthiessen /> <i
-                                    class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/ckthiessen> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -574,9 +574,9 @@
                         <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/aribaanees /> <i
-                                    class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/aribaanees> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -592,9 +592,45 @@
                         <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/groups/1843315 /> <i
-                                    class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/groups/1843315> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_dustin-centered.jpg" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>Dustin King</strong></p>
+                        <p class="job-title">UofC Leader</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/in/dustin-king-30932a193> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_cjpg.jpg" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>Christian Garrovillo</strong></p>
+                        <p class="job-title">SAIT Leader</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/in/cgarrovillo> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -613,9 +649,8 @@
                         <p class="job-title">Dev Leader @ Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/rostoker /> <i
-                                    class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/rostoker> <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -631,8 +666,8 @@
                         <p class="job-title">Scrum Master @ Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/priyash /> <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/priyash> <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
