--- a/projects.html
+++ b/projects.html
@@ -128,62 +128,222 @@
     </div> <!-- end of ex-basic-1 -->
     <!-- end of breadcrumbs -->
 
+    <!-- Projects Content -->
+    <div class="basic-2">
+        <!-- Section Header -->
+        <div class="container mb-5">
+            <h3>Currently Available Projects</h3>
+        </div>
 
-    <!-- Terms Content -->
-    <div class="ex-basic-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="text-container">
-                        <h3>Currently Available Projects</h3>
-                        <h2>The YW</h2>
-                        <ol>
-                            <li><b>Natural Language Processing Project</b> - The YW receives critical incident reports
-                                from people at risk describing the risks they are facing, along with various details
-                                regarding personal information and the incident itself. These reports can often be
-                                difficult to categorize, as the current format requires that volunteers at the YW read
-                                through each report to determine the type of report and who should manage it. They have
-                                asked for our help in developing a machine learning solution to analyze and correctly
-                                categorize the reports based on the type of incident. The technologies used will be
-                                discussed with the YW further, but you will be sure to hone your Python, ML, and data
-                                analysis skills by working on this project, while also helping vulnerable people receive
-                                the help they need at a more efficient rate.</li>
-                            <li><b>E-learning Storefront Project</b> - The YW has asked for our help in developing a
-                                storefront/marketing website with e-commerce integration to host informational
-                                e-learning videos on the topic of Mindful Workplaces. These videos will help employees
-                                across Calgary manage stress, conflict, and pick up on emotional regulation skills,
-                                which all lead towards healthier work environments. You will expand your web development
-                                and e-commerce skills, while helping develop a product that will reduce stress and
-                                improve the work life of hundreds of Calgarians.</li>
-                        </ol>
-                        <h2>Momentum</h2>
-                        <ol>
-                            <li><b>Money Savings Program</b> - Momentum offers financial education and resources to
-                                Calgarians, and one of the excellent programs they offer encourages low-income
-                                Calgarians to learn how to save money by matching the amount they manage to save at the
-                                end of a set time period. Their current solution needs various improvements regarding
-                                verification of savings, low-income status, and location. Some technologies you will be
-                                working with are various web development languages and API integration with financial
-                                aggregators, just to name a few. Plus, you’ll be directly contributing to a program that
-                                enables Calgarians to escape the grips of poverty.</li>
-                        </ol>
-                        <h2>Alberta Mental Health Advocacy Coalition (AMHAC)</h2>
-                        <ol>
-                            <li><b>Website/Logo Project</b> - The Alberta Mental Health Advocacy Coalition (AMHAC) aims
-                                to transform the mental healthcare system to one that is more accessible, appropriate,
-                                equitable, effective, empowering and sustainable for patients, family, the public and
-                                health providers. They currently do not have a logo or website to accurately represent
-                                them or their vision. You will be involved in graphic design and web development,
-                                including UI/UX design, while contributing to a mission that benefits one of the
-                                greatest struggles that the majority of society faces.</li>
-                        </ol>
-                    </div> <!-- end of text-container -->
+        <!-- Project -->
+        <div class=" container mb-5">
+            <div class="row no-gutters">
+                <!-- Project Logo -->
+                <div class="col-md-4">
+                    <img class="card-img" src="./images/_yw-alt.png">
                 </div>
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of ex-basic -->
-    <!-- end of terms content -->
+                <!-- Project Summary -->
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">The YW</h4>
+                        <ol>
+                            <li>
+                                <b class="m-1">Natural Language Processing</b>
+                                <ul class="pl-3">
+                                    <li>Use machine learning to classify critical incident reports</li>
+                                    <li>Great opportunity for those interested in Machine Learning to test their skills
+                                    </li>
+                                    <li>Work with industry mentors with machine learning expertise</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <b class="m-1">E-learning Storefront Project</b>
+                                <ul class="pl-3">
+                                    <li>Creation and design of a storefront website with e-commerce integrated</li>
+                                    <li>Build APIs to interface with companies' different E-Learning platforms</li>
+                                    <li>Work with secure registration and authentication technologies</li>
+                                </ul>
+                            </li>
+                        </ol>
+                        <a class="" href="#project-yw" data-toggle="collapse">Details ></a>
+                    </div>
+                </div>
+            </div>
 
+            <!-- Project Meat -->
+            <div class="collapse mt-3" id="project-yw">
+                <div class="card-body">
+                    <ol>
+                        <li><b>Natural Language Processing Project</b> - The YW receives critical incident reports
+                            from people at risk describing the risks they are facing, along with various details
+                            regarding personal information and the incident itself. These reports can often be
+                            difficult to categorize, as the current format requires that volunteers at the YW read
+                            through each report to determine the type of report and who should manage it. They have
+                            asked for our help in developing a machine learning solution to analyze and correctly
+                            categorize the reports based on the type of incident. The technologies used will be
+                            discussed with the YW further, but you will be sure to hone your Python, ML, and data
+                            analysis skills by working on this project, while also helping vulnerable people receive
+                            the help they need at a more efficient rate.</li>
+                        <li><b>E-learning Storefront Project</b> - The YW has asked for our help in developing a
+                            storefront/marketing website with e-commerce integration to host informational
+                            e-learning videos on the topic of Mindful Workplaces. These videos will help employees
+                            across Calgary manage stress, conflict, and pick up on emotional regulation skills,
+                            which all lead towards healthier work environments. You will expand your web development
+                            and e-commerce skills, while helping develop a product that will reduce stress and
+                            improve the work life of hundreds of Calgarians.</li>
+                    </ol>
+                </div>
+            </div><!-- end of project details -->
+        </div><!-- end of project container -->
+        <!-- end of project -->
+
+        <!-- Project -->
+        <div class=" container mb-5">
+            <div class="row no-gutters">
+                <!-- Project Logo -->
+                <div class="col-md-4">
+                    <img class="card-img" src="./images/_amhac-placeholder-alt.png">
+                </div>
+                <!-- Project Summary -->
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">Alberta Mental Health Activism Coalition</h4>
+                        <ol>
+                            <li>
+                                <b class="m-1">Website and Marketing design</b>
+                                <ul class="pl-3">
+                                    <li>Create and design the organization website and logo</li>
+                                    <li>Expand their online presence to reach more individuals</li>
+                                    <li>Good project for members who are at the beginning of their programming journey
+                                    </li>
+                                </ul>
+                            </li>
+                        </ol>
+                        <a href="#project-amhac" data-toggle="collapse">Details ></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Meat -->
+            <div class="collapse mt-3" id="project-amhac">
+                <div class="card-body">
+                    <p><b>The Alberta Mental Health Activism Coalition</b> has asked Code The Change YYC to help
+                        build
+                        them a website. They are looking to expand their online presence so that they can reach more
+                        people and help advocate for the importance of mental health awareness in Alberta. This will
+                        be the easiest of the projects and will be a good project for members who are at the
+                        beginning of their programming journey.
+                    </p>
+                </div>
+            </div><!-- end of project details -->
+        </div><!-- end of project container-->
+        <!-- end of project -->
+
+        <!-- Project -->
+        <div class=" container mb-5">
+            <div class="row no-gutters">
+                <!-- Project Logo -->
+                <div class="col-md-4">
+                    <img class="card-img" src="./images/_mindfuel-alt.png">
+                </div>
+                <!-- Project Summary -->
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">Mindfuel</h4>
+                        <ol>
+                            <li>
+                                <b class="m-1">System Re-Design</b>
+                                <ul class="pl-3">
+                                    <li>Build an activity board that contains new aggregated data everyday</li>
+                                    <li>Start from scratch or build on top of current system</li>
+                                    <li>Work with skilled developers from the Mindfuel team
+                                    </li>
+                                </ul>
+                            </li>
+                        </ol>
+                        <a href="#project-mindfuel" data-toggle="collapse">Details ></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Meat -->
+            <div class="collapse mt-3" id="project-mindfuel">
+                <div class="card-body">
+                    <p><b>Mindfuel</b> makes learning fun for young students by providing learning modules including
+                        videos, comics and games for students to interact with in the classroom (wonderville.org).
+                        They have an activity board (running a web socket with Google Maps API) that displays where in
+                        the world their learning module products are being used - each time a resource is accessed, it
+                        triggers the activity board. This activity board is important for internal users to assess
+                        demographics and usage of products, and to showcase to stakeholders. It’s also displayed on
+                        office monitors. However, it is also very old and outdated—it needs a total rebuild. They would
+                        like it to look more visually appealing with a more modern look, all while connecting to a
+                        database to grab and present non-sensitive data. Work with the freedom to choose between
+                        building on top of Mindfuel's current system, or perform a full system redesign.
+                    </p>
+                </div>
+            </div><!-- end of project details -->
+        </div><!-- end of project container-->
+        <!-- end of project -->
+
+        <!-- Project -->
+        <div class=" container mb-5">
+            <div class="row no-gutters">
+                <!-- Project Logo -->
+                <div class="col-md-4">
+                    <img class="card-img" src="./images/_momentum-alt.png">
+                </div>
+
+
+                <!-- Project Summary -->
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">Momentum</h4>
+
+                        <div class="alert alert-secondary" role="alert">
+                            <p>Please Note: This project has been temporarily put on hold until further notice.</p>
+                            <p class="blockquote-footer">Code the Change YYC Team</p>
+                        </div>
+
+
+                        <div class="d-none">
+                            <ol>
+                                <li>
+                                    <b class="m-1">Savings Program Web App</b>
+                                    <ul class="pl-3">
+                                        <li>Create and design a web application for their savings program</li>
+                                        <li>Build APIs to interface with a financial aggregating software, handling
+                                            sensitive financial data</li>
+                                        <li>Work with industry mentors with a sofware & financial security expertise
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ol>
+                            <a href="#project-mindfuel" data-toggle="collapse">Details ></a>
+                        </div>
+                    </div>
+                </div>
+                <!--end of project summary-->
+            </div>
+
+            <!-- Project Meat -->
+            <div class="collapse mt-3" id="project-mindfuel">
+                <div class="card-body">
+                    <p><b>Momentum</b> helps low-income Calgarians learn how to manage their money. One of their
+                        programs is savings matching where, if a user can prove that they have saved money, Momentum
+                        will match their savings, up to a limit. Their current solution for verifying their users are
+                        actually saving what they say they are is prone to forgery so they have asked our members to
+                        help build a system that can accurately verify that their users are saving money. You will be
+                        working with their pre-existing website and building APIs to interface with a professional
+                        financial aggregating software to ensure their users are saving honestly. We will be consulting
+                        our mentors who are security experts along the way so that you may learn the best practices when
+                        handling sensitive financial data
+                    </p>
+                </div>
+            </div><!-- end of project details -->
+        </div><!-- end of project container-->
+        <!-- end of project -->
+    </div> <!-- end of ex-basic -->
+    <!-- end of Projects content -->
 
     <!-- Breadcrumbs -->
     <div class="ex-basic-1">
