--- a/members.html
+++ b/members.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--This page should be inaccessible at the moment, but a fallback link to google forms is present just in case-->
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -114,7 +116,40 @@
     </header> <!-- end of ex-header -->
     <!-- end of header -->
 
-    <div class="container">
+    <!-- Applications promo -->
+    <div id="applications" class="cards-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Applications are now open!</h2>
+                    <p class="p-heading p-large">Interested in joining the largest student-led code for good groups in
+                        Calgary? Applications are open
+                        till <b>February 14, 2020.</b>
+                    </p>
+
+                    <div class="m-4">
+                        <h4 class="p-large">If you are interested in joining a team and working directly on a
+                            project, <br /> please fill out the
+                            Programmer Application Form.</h4>
+                        <a class="btn-solid-lg"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLScUPNsq5qOc9530bkgJ-5Jo57Wiq4kb2PILFPs8s-GZ-doCqw/viewform">Programmer
+                            Application Form</a>
+                    </div>
+
+                    <div class="m-4">
+                        <h4 class=" p-large">If you are interested in joining an internal admin role, <br />please fill
+                            out the Admin Application Form.</h4>
+                        <a class="btn-solid-lg"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSdAIBmGULRIHRX9sGb9vKcXaEDZozbMNClBSKmG0cCKnPZ_hQ/viewform">Admin
+                            Application Form</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container d-none">
         <h2 class="mb-4 text-secondary font-weight-normal">Member Registration Form</h4>
             <form id="member-form"
                 action="https://docs.google.com/forms/d/e/1FAIpQLScUPNsq5qOc9530bkgJ-5Jo57Wiq4kb2PILFPs8s-GZ-doCqw"
